[gd_scene load_steps=35 format=2]

[ext_resource path="res://earth.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/satellite_blink.png" type="Texture" id=2]
[ext_resource path="res://Sprites/background.png" type="Texture" id=3]
[ext_resource path="res://sun.tscn" type="PackedScene" id=4]
[ext_resource path="res://player.gd" type="Script" id=5]
[ext_resource path="res://spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main.gd" type="Script" id=7]
[ext_resource path="res://Display.gd" type="Script" id=8]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Sprites/stopwatch.png" type="Texture" id=10]
[ext_resource path="res://pauseMenu.gd" type="Script" id=11]
[ext_resource path="res://Sprites/rad_bar_fill.png" type="Texture" id=12]
[ext_resource path="res://Sprites/radiation_symbol.png" type="Texture" id=13]
[ext_resource path="res://Sprites/satellite.png" type="Texture" id=14]
[ext_resource path="res://music/Sunstrider.wav" type="AudioStream" id=15]
[ext_resource path="res://music/Error 1.wav" type="AudioStream" id=16]
[ext_resource path="res://Sprites/satellite_hit.png" type="Texture" id=17]
[ext_resource path="res://Sprites/rad_bar_background.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]
resource_name = "stars"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.29504, 17.9775 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 37, 25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 17 )
region = Rect2( 37, 0, 37, 25 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 17 )
region = Rect2( 74, 0, 37, 25 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 35, 25 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 35, 0, 35, 25 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 3 ) ],
"loop": true,
"name": "hit",
"speed": 7.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "blink",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8.83176, 18.9155 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 38
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=12]
size = 70
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 100, 31 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 100, 31 )

[sub_resource type="DynamicFont" id=15]
size = 23
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=16]
size = 60
font_data = ExtResource( 9 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="soundtrack" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 656.029, 188.651 )
scale = Vector2( 1.38587, 1.38587 )
stream = ExtResource( 15 )
volume_db = -2.144

[node name="spawner" parent="." instance=ExtResource( 6 )]

[node name="background" type="Sprite" parent="."]
position = Vector2( 457.558, 268.985 )
scale = Vector2( 2.9505, 3.14692 )
texture = ExtResource( 3 )
flip_v = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="background"]
autoplay = "stars"
anims/stars = SubResource( 1 )

[node name="satellite" type="KinematicBody2D" parent="." groups=[
"player",
]]
position = Vector2( 656.029, 188.651 )
scale = Vector2( 1.38587, 1.38587 )
z_as_relative = false
script = ExtResource( 5 )
acceleration = 0.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="satellite"]
position = Vector2( -155.676, 0.532471 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="satellite"]
position = Vector2( -163.586, 1.21353 )
rotation = -1.5708
scale = Vector2( 1.238, 1.238 )
frames = SubResource( 8 )
animation = "blink"
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="satellite"]
position = Vector2( 5.91592, 2.57138 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="satellite/Area2D"]
position = Vector2( -161.437, -1.99802 )
shape = SubResource( 9 )

[node name="hit" type="AudioStreamPlayer2D" parent="satellite"]
stream = ExtResource( 16 )
volume_db = 17.155

[node name="sun" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]

[node name="stopwatch" type="Sprite" parent="."]
position = Vector2( 51.3361, 488.34 )
scale = Vector2( 3.39133, 3.39133 )
texture = ExtResource( 10 )

[node name="Display" type="Label" parent="."]
margin_left = 105.7
margin_top = 470.74
margin_right = 316.7
margin_bottom = 555.74
custom_fonts/font = SubResource( 10 )
text = "1"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseMenu" type="Control" parent="."]
visible = false
light_mask = 2
margin_top = 422.0
margin_right = 701.0
margin_bottom = 547.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background2" type="Sprite" parent="pauseMenu"]
visible = false
position = Vector2( 463.215, -148.772 )
scale = Vector2( 2.9505, 3.14692 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="pauseMenu"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -350.232
margin_right = 144.0
margin_bottom = -247.232
custom_fonts/font = SubResource( 11 )
text = "Unpause"

[node name="Button2" type="Button" parent="pauseMenu"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -223.096
margin_right = 144.0
margin_bottom = -120.096
custom_fonts/font = SubResource( 11 )
text = "Quit"

[node name="Label" type="Label" parent="pauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -273.0
margin_top = -458.566
margin_right = 273.0
margin_bottom = -367.566
custom_fonts/font = SubResource( 12 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="earth" parent="." instance=ExtResource( 1 )]
position = Vector2( 655.597, 188.922 )

[node name="background3" type="Sprite" parent="earth"]
visible = false
position = Vector2( -192.382, 84.306 )
scale = Vector2( 2.9505, 3.14692 )
texture = ExtResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="earth"]
margin_left = -410.0
margin_top = 244.0
margin_right = 39.0
margin_bottom = 338.0
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="radiation_symbol" type="Sprite" parent="earth/ProgressBar"]
position = Vector2( 9.40982, 48.4861 )
scale = Vector2( 3.91868, 3.91868 )
texture = ExtResource( 13 )

[node name="Gameover" type="Control" parent="earth"]
pause_mode = 2
visible = false
margin_left = -655.597
margin_top = -188.922
margin_right = 47.403
margin_bottom = 357.078
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background3" type="Sprite" parent="earth/Gameover"]
position = Vector2( 463.215, 273.228 )
scale = Vector2( 2.9505, 3.14692 )
texture = ExtResource( 3 )

[node name="Button4" type="Button" parent="earth/Gameover"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = 130.948
margin_right = 143.0
margin_bottom = 233.948
custom_fonts/font = SubResource( 11 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="satellite" type="Sprite" parent="earth/Gameover/Button4"]
position = Vector2( -107.097, -80.6235 )
rotation = 0.789937
scale = Vector2( 5.06892, 5.06892 )
texture = ExtResource( 14 )

[node name="Button5" type="Button" parent="earth/Gameover"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -0.905212
margin_right = 143.0
margin_bottom = 102.095
custom_fonts/font = SubResource( 11 )
text = "Replay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="earth/Gameover"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -409.5
margin_top = -253.152
margin_right = 409.5
margin_bottom = -162.152
custom_fonts/font = SubResource( 12 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="earth/Gameover"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -409.5
margin_top = -145.837
margin_right = 409.5
margin_bottom = -81.8366
custom_fonts/font = SubResource( 16 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="earth/Gameover"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -409.5
margin_top = -91.0088
margin_right = 409.5
margin_bottom = -0.00878906
custom_fonts/font = SubResource( 16 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="satellite/AnimatedSprite" to="satellite" method="_on_Sprite_animation_finished"]
[connection signal="area_entered" from="satellite/Area2D" to="satellite" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="spawner" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="pauseMenu/Button" to="pauseMenu" method="_on_Button_pressed"]
[connection signal="pressed" from="pauseMenu/Button2" to="pauseMenu" method="_on_Button2_pressed"]
[connection signal="game_over" from="earth" to="spawner" method="_on_earth_game_over"]
[connection signal="pressed" from="earth/Gameover/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="earth/Gameover/Button5" to="." method="_on_Button5_pressed"]
